RESOLVED FIXED113290
Web Inspector: [Elements] Unable to "Edit as HTML" XHTML/SVG documents.
https://bugs.webkit.org/show_bug.cgi?id=113290
Summary Web Inspector: [Elements] Unable to "Edit as HTML" XHTML/SVG documents.
Alexander Pavlov (apavlov)
Reported 2013-03-26 03:12:23 PDT
Only HTML documents are currently handled by DOMPatchSupport. Upstreaming https://code.google.com/p/chromium/issues/detail?id=222184
Attachments
Patch (13.19 KB, patch)
2013-03-26 03:42 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2013-03-26 03:42:11 PDT
WebKit Review Bot
Comment 2 2013-03-26 09:47:46 PDT
Comment on attachment 195050 [details] Patch Clearing flags on attachment: 195050 Committed r146897: <http://trac.webkit.org/changeset/146897>
WebKit Review Bot
Comment 3 2013-03-26 09:47:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.