Web Inspector: [Elements] Unable to "Edit as HTML" XHTML/SVG documents. https://bugs.webkit.org/show_bug.cgi?id=113290

Reviewed by Pavel Feldman.

Source/WebCore:

DOMPatchSupport has been slightly augmented to handle XML (XHTML and SVG) documents.

Test: inspector/elements/set-outer-html-for-xhtml.xhtml

* inspector/DOMPatchSupport.cpp:
(WebCore::DOMPatchSupport::patchDocument):
(WebCore::DOMPatchSupport::patchNode):
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::setOuterHTML): Let HTML, XHTML, and SVG documents through.

LayoutTests:

* inspector/elements/set-outer-html-for-xhtml-expected.txt: Added.
* inspector/elements/set-outer-html-for-xhtml.xhtml: Added.


Canonical link: https://commits.webkit.org/131645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146897 268f45cc-cd09-0410-ab3c-d52691b4dbfc